# wzn-dao

./: .gitignore  Anchor.toml  DEPLOYMENT_STATUS.md  FINAL_SUMMARY.md  PROJECT_STATUS_HONEST.md  PROJECT_SUMMARY.md  README.md  cleanup-packages.ps1  package-lock.json  package.json  tsconfig.json
programs/wzn_card_game/: Cargo.toml
programs/wzn_card_game/src/: lib.rs
scripts/: deploy-devnet.ps1  deploy-devnet.sh  test-gas.sh
tests/: integration.ts  unit_tests.rs  wzn_card_game.rs
