[package]
name = "wzn_card_game"
version = "0.1.0"
description = "WZN Card Game Smart Contract - Burn-to-Access Model"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wzn_card_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
